--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.0.15",
+    "axios": "^1.8.4",
     "lucide-react": "^0.483.0",
     "quagga": "^0.12.1",
     "react": "^19.0.0",
